# search

./: .gitignore  README.md
booksearch/: Cargo.toml  Dockerfile  fakedata.sql  postgres.sql
booksearch/src/: main.rs
booksearch/src/backend/: embeddings.rs  mod.rs  postgres.rs
booksearch/src/fairing/: mod.rs
booksearch/src/response/: mod.rs
cluster/: booksearch.yml  debezium.yml.tmp  gateway.yml  gateway_class.yml  gateway_internal.yml  jupyter.yml.tmp  kafka.yml.tmp  nginx.yml  nginx.yml.tmp  ollama.yml  ollama.yml.tmp  pgvector.yml  postgres.yml  pulsar.yml  routes.yml  service.yml
cluster/flux/: flux-receiver.yml  pdfsearch-kustomization.yaml  pdfsearch-source.yml
cluster/flux/flux-system/: gotk-sync.yaml
cluster/production/: booksearch.yml  gateway.yml  ip-updater.yml  kustomization.yml  nginx.yml  ollama.yml  pulsar.yml  routes.yml  service.yml
pdf_processor/: 4_pdf_search.ipynb  Untitled.ipynb  denodo_vectorstore.py  gutenberg.ipynb  pdf_schema.py  pdf_stream_process.ipynb  scraper.ipynb
react_frontend/: Dockerfile  package-lock.json  package.json
react_frontend/frontend/: Home.jsx  PDFReader.jsx
react_frontend/search-frontend/: package-lock.json  package.json
react_frontend/search-frontend/public/: index.html  manifest.json
react_frontend/search-frontend/src/: App.css  App.js  index.css
react_frontend/src/: App.css  App.js  index.css
react_frontend/src/components/: EPUBReader.js  SearchBar.js  SearchResults.js
react_frontend/www/birthday_website/: index.html
react_frontend/www/carson/: index.html  index.html.bak
(+5 files in other folders)
